// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MemberSelector renders correctly (with min props) 1`] = `
<TagInput
  handleAddition={[Function]}
  handleDelete={[Function]}
  handleInputChange={[Function]}
  placeholder="Type persons name..."
  renderSuggestion={[Function]}
  suggestions={Array []}
  tags={Array []}
  theme={Object {}}
/>
`;

exports[`Suggestion renders correctly (with a user) 1`] = `
<li
  key="1"
>
  <a
    className="suggestionLink"
    onClick={[Function]}
  >
    <RoundImage
      className="suggestionAvatar"
      small={true}
      url="face.png"
    />
    <div
      className="suggestionName"
    >
      Joe Joe
    </div>
  </a>
</li>
`;

exports[`Suggestion renders correctly (with min props) 1`] = `
<li
  key="blank"
>
  <a
    className="suggestionLink"
    onClick={[Function]}
  >
    <RoundImage
      className="suggestionAvatar"
      small={true}
    />
    <div
      className="suggestionName"
    />
  </a>
</li>
`;
